--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Awesome-Books-ES6",
+  "name": "awesome-books-es6",
   "version": "1.0.0",
   "description": "In this project, the Awesome books app will be restructured to make it more organized by using modules and ES6 syntax.",
   "main": "index.js",
@@ -22,7 +22,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
-    "hint": "^7.1.8",
+    "hint": "^7.1.10",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
